src/manifests/wordpress/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: assignment
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: "/"
  labels:
    app: wordpress
spec:
  ports:
    - port: 80
  selector:
    app: wordpress
    tier: frontend
  type: NodePort
  # type: LoadBalancer
